[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { git = "https://github.com/remi-dupre/aoc.git" , branch = "main" }
regex = "1.4.2"
num = "0.3.1"
hashbrown = "0.9.1"
